Added support for nightly builds to release tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,10 +49,17 @@ option(WITH_XC_BROWSER "Include browser extension support." OFF)
 # Process ui files automatically from source files
 set(CMAKE_AUTOUIC ON)
 
+set(KEEPASSXC_NIGHTLY_BUILD OFF CACHE BOOL "Set this as a nightly build")
+set(KEEPASSXC_NIGHTLY_VERSION "" CACHE STRING "Special version string for nightly builds")
+
 set(KEEPASSXC_VERSION_MAJOR "2")
 set(KEEPASSXC_VERSION_MINOR "2")
 set(KEEPASSXC_VERSION_PATCH "4")
-set(KEEPASSXC_VERSION "${KEEPASSXC_VERSION_MAJOR}.${KEEPASSXC_VERSION_MINOR}.${KEEPASSXC_VERSION_PATCH}")
+if(KEEPASSXC_NIGHTLY_BUILD)
+  set(KEEPASSXC_VERSION "${KEEPASSXC_NIGHTLY_VERSION}")
+else()
+  set(KEEPASSXC_VERSION "${KEEPASSXC_VERSION_MAJOR}.${KEEPASSXC_VERSION_MINOR}.${KEEPASSXC_VERSION_PATCH}")
+endif()
 
 # Distribution info
 set(KEEPASSXC_DIST True)
