--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -338,11 +338,13 @@ if(MINGW)
                   "${CMAKE_SOURCE_DIR}/LICENSE.GPL-2"
                   "${CMAKE_CURRENT_BINARY_DIR}/INSTALLER_LICENSE.txt")
 
+  string(REGEX REPLACE "_.*$" "" KEEPASSXC_VERSION_CLEAN ${KEEPASSXC_VERSION})
+
   set(CPACK_GENERATOR "ZIP;NSIS")
   set(CPACK_STRIP_FILES ON)
   set(CPACK_PACKAGE_FILE_NAME "${PROGNAME}-${KEEPASSXC_VERSION}-${OUTPUT_FILE_POSTFIX}")
   set(CPACK_PACKAGE_INSTALL_DIRECTORY ${PROGNAME})
-  set(CPACK_PACKAGE_VERSION ${KEEPASSXC_VERSION})
+  set(CPACK_PACKAGE_VERSION ${KEEPASSXC_VERSION_CLEAN})
   set(CPACK_PACKAGE_VENDOR "${PROGNAME} Team")
   string(REGEX REPLACE "/" "\\\\\\\\" CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/share/windows/installer-header.bmp")
   set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_BINARY_DIR}/INSTALLER_LICENSE.txt")
